<project>
  <modelVersion>4.0.0</modelVersion>
  <groupId>nl.klimdanick.pson</groupId>
  <artifactId>Pson-Jarser</artifactId>
  <version>2.0.0</version>
  <packaging>jar</packaging>
  
  <name>Pson Jarser</name>
  <description>A simple json parser for java</description>
  <url>https://github.com/klimdanick/Pson-Jarser</url>
  
  <licenses>
    <license>
      <name>MIT license</name>
      <url>https://github.com/klimdanick/Pson-Jarser/blob/main/LICENSE</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  
  <build>
    <sourceDirectory>pson/src</sourceDirectory>
    <resources>
      <resource>
        <directory>pson</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>16</release>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <dependencies>
	  <!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
		    <groupId>junit</groupId>
		    <artifactId>junit</artifactId>
		    <version>4.13.2</version>
		    <scope>test</scope>
		</dependency>
  </dependencies>
</project>